--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,12 @@
 body {
   padding: 3em;
 }
+
+.links-down {
+  display: flex;
+  flex-direction: column;
+}
+
+.links-down * {
+  padding-bottom: 1rem;
+}
