--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,3 @@
-/* body {
-  padding: 3em;
-}
-
-.links-down {
-  display: flex;
-  flex-direction: column;
-}
-
-.links-down * {
-  padding-bottom: 1rem;
-} */
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
 
 body {
@@ -18,6 +6,24 @@ body {
   background-size: 400% 400%;
   animation: gradientBG 15s ease infinite;
   overflow: hidden;
+}
+
+.github-link-wrapper {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  bottom: 20px;
+  right: 20px;
+}
+
+.github--icn {
+  width: 50px;
+}
+
+.github--icn__txt {
+  font-size: 0.8rem;
 }
 
 @keyframes gradientBG {
