--- a/parallax/styles.css
+++ b/parallax/styles.css
@@ -65,3 +65,18 @@ section {
   background-color: #333;
   color: white;
 }
+
+@media only screen and (max-width: 600px) {
+  section {
+    font-size: 1.5rem;
+    padding: 5rem 1rem;
+    text-align: justify;
+    background-color: #333;
+    color: white;
+  }
+
+  .title {
+    font-size: 4rem;
+    text-align: center;
+  }
+}
