--- a/media-queries/styles.css
+++ b/media-queries/styles.css
@@ -29,20 +29,42 @@ body {
 /* Basic Styles */
 
 .product-grid {
+  margin: 2rem;
+  margin-top: 10rem;
   display: grid;
   grid-template-columns: repeat(3, 30rem);
   grid-template-rows: repeat(2, 25rem);
-  object-fit: scale-down;
+  gap: 2rem;
 }
 
 .product-card {
   background-color: rgba(240, 248, 255, 0.2);
-  object-fit: scale-down;
+  border-radius: 1rem;
+  overflow: hidden;
+  position: relative;
 }
 
 .product-card img {
-  /* max-width: fit-content; */
-  /* max-height: 15rem; */
+  width: fit-content;
+  position: absolute;
+  border-radius: 1rem;
+}
+
+.product-info {
+  position: absolute;
+  bottom: 0;
+  padding: 1rem 2rem;
+  z-index: 100;
+  background-color: #000000bd;
+}
+
+.product-info p {
+  margin: 2% 0;
+  text-align: justify;
+}
+
+.product-info span {
+  font-size: larger;
 }
 
 /* Media queries */
