--- a/fancy-button/styles.css
+++ b/fancy-button/styles.css
@@ -48,6 +48,7 @@ button {
   width: 10rem;
   height: 10rem;
   position: relative;
+  border: none;
 }
 
 button::before {
@@ -57,20 +58,22 @@ button::before {
   width: 100%;
   height: 100%;
   position: absolute;
-  top: 0;
+  top: 0.2rem;
   bottom: 0;
   opacity: 40%;
   transform: translate(-1.3rem, 2rem);
+  z-index: 10;
 }
 
 button::after {
+  clip-path: path("M 50 0 L 61 35 L 98 35 L 68 57 L 79 93 L 50 71 L 21 93 L 32 57 L 2 35 L 39 35 Z");
   content: "";
   border-radius: 4px;
   position: absolute;
   width: 100%;
   height: 100%;
-  top: 0;
-  left: 0;
+  top: 2.5rem;
+  left: 2.5rem;
   background-color: #ffffff05;
 }
 
