--- a/transition-3d/styles.css
+++ b/transition-3d/styles.css
@@ -50,3 +50,41 @@ body {
   background: #23242a;
   color: white;
 }
+
+/* Challenge */
+
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 25rem;
+  width: 18rem;
+  border: 10px white solid;
+  padding: 3rem 2rem;
+  border-radius: 8px;
+  box-shadow: 10px 5px 5px #ffffff20;
+  position: relative;
+  transition: transform 1s ease, box-shadow 0.8s ease;
+  cursor: crosshair;
+  background: linear-gradient(0.2turn, #00ff3730, #00ffff30, #0501f330);
+}
+
+.card h2 {
+  background-color: #00000050;
+  padding: 3rem 1rem;
+  text-align: center;
+  border-radius: 4px;
+}
+
+.card p {
+  background-color: #ffffff50;
+  padding: 1rem;
+  text-align: initial;
+  border-radius: 4px;
+  color: #000000;
+}
+
+.card:hover {
+  transform: rotateX(50deg);
+  box-shadow: 0px 100px 70px #ffffff20;
+}
