--- a/loading/styles.css
+++ b/loading/styles.css
@@ -41,3 +41,44 @@ body {
 }
 
 /* Add containment to the container element */
+.loading-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  gap: 1rem;
+}
+
+.dot {
+  border-radius: 100%;
+  background-color: gray;
+  width: 1rem;
+  height: 1rem;
+}
+
+.dot1 {
+  animation: load 1s alternate infinite;
+}
+
+.dot2 {
+  animation: load 1s alternate infinite;
+  animation-delay: 500ms;
+}
+
+.dot3 {
+  animation: load 1s alternate infinite;
+  animation-delay: 1s;
+}
+
+@keyframes load {
+  0% {
+    background-color: gray;
+    width: 1rem;
+    height: 1rem;
+  }
+  100% {
+    background-color: rgba(244, 244, 244, 0.13);
+    width: 1.5rem;
+    height: 1.5rem;
+  }
+}
